--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,23 @@
 .topnav {
-    background-color: #333;
+    background-color: #121;
     overflow: hidden;
     font-family: cursive;
+}
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #c6ddd6;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #16af2e;
+    color: white;
 }
