background-color & picture(avatar)

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@
     margin-right: 200px;
     background-color: white;
 }
-
 .topnav a {
    /* float: left;
     color: white;
@@ -32,7 +31,6 @@
     white-space: nowrap;
     overflow-x: auto;
 }
-
 .topnav a:hover {
     color: #067217;
     font-size: 14px;
@@ -53,7 +51,6 @@ a:link, a:visited{
     text-decoration: none;
     color:#2ee5a4;
 }
-
 .menu{
     box-sizing: border-box;
     white-space: nowrap;
@@ -66,9 +63,8 @@ a:link, a:visited{
     overflow-x: visible;
     border: 200px;
     align-content: center;
-
 }
-.about{
+.about {
     color: #2ee5a4;
     border-bottom: 2px solid #2ee5a4;
     font-size: 14px;
@@ -101,8 +97,6 @@ a:link, a:visited{
     height: 15px;
     cursor: pointer;
 }
-
-
 body{
     font-family: "Helvetica Neue", HelveticaNeue, Helvetica, TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
     text-rendering: optimizeLegibility;
@@ -114,6 +108,12 @@ body{
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+.name {
+    text-align: center;
+    margin-left: 120px;
+    display: inline-block;
+    vertical-align: middle;
 }
 .avatar {
     vertical-align: middle;
