--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+.header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
 .topnav {
    /* background-color: #7ec985;
     overflow: hidden;
@@ -8,15 +13,15 @@
     margin-top: 60px;
     box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2); */
     border-top: 1px solid #eeeff2;
-    position: relative; 
-    border-bottom: 1px solid #eeeff2;
+  /*  position: relative;
+    border-bottom: 1px solid #eeeff2; */
     overflow: hidden;
-    margin-top: 60px;
+    margin-top: 20px;
     box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
-    margin-left: 200px;
-    margin-bottom: 60px;
-    margin-right: 200px;
+    margin-bottom: 30px;
     background-color: white;
+    margin-left: 200px;
+    margin-right: 200px;
 }
 .topnav a {
    /* float: left;
@@ -63,6 +68,10 @@ a:link, a:visited{
     overflow-x: visible;
     border: 200px;
     align-content: center;
+    float: left;
+}
+li {
+    display: inline;
 }
 .about {
     color: #2ee5a4;
@@ -73,6 +82,14 @@ a:link, a:visited{
     height: 15px;
 }
 .project{
+    color: #2ee5a4;
+    border-bottom: 2px solid #2ee5a4;
+    font-size: 14px;
+    display: inline-block;
+    padding: 15px 10px;
+    height: 15px;
+}
+.hobby {
     color: #2ee5a4;
     border-bottom: 2px solid #2ee5a4;
     font-size: 14px;
@@ -98,40 +115,78 @@ a:link, a:visited{
     cursor: pointer;
 }
 body{
-    font-family: "Helvetica Neue", HelveticaNeue, Helvetica, TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
+    font-family: OpenSans;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     background-color: #f9f3ff;
+    float: left;
 }
 .profile-box {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    float: left;
+    width: 28%;
+    padding: 15px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+    margin-left: 30px;
+}
+@media (max-width:600px) {
+    #profile-box {
+        width: 100%;
+    }
 }
 .name {
     text-align: center;
-    margin-left: 120px;
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
+    margin: inherit;
 }
 .avatar {
     vertical-align: middle;
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    margin-left: 80px;
+    margin: inherit;
 }
-
+.words{
+    color: #486372;
+    margin: inherit;
+    font-style: italic;
+    padding: 10px;
+}
+.description {
+  /*  background-image: url("background.jpg");
+    min-height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    float: right;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+    width: 50%;
+    height: 370px;
+    padding: 30px;
+    margin-right: 30px;
+}
+@media (max-width: 600px) {
+    #description {
+        width: 100%;
+    }
+}
 h1{
     color: #577483;
     font-style: normal;
-    font-family: OpenSans;
-    margin-left: 500px;
+  /*font-family: OpenSans;*/
+   /*margin-left: 500px; */
+    display: inline;
+    text-align: center;
+    margin: inherit;
+    padding: 10px;
 }
 p{
-    font-family: OpenSans;
+   /*font-family: OpenSans;*/
     color: #486372;
-    margin-top: 30px;
-    margin-left: 600px;
+   /*margin-top: 30px;
+    margin-left: 600px;*/
+    display: inline;
+    text-align: center;
+    margin: inherit;
 }
