--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ body{
     float: right;
     box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
     width: 50%;
-    height: 370px;
+    height: 200px;
     padding: 30px;
     margin-right: 30px;
 }
@@ -181,6 +181,14 @@ h1{
     margin: inherit;
     padding: 10px;
 }
+h3{
+    color: #577483;
+    font-style: normal;
+    display: inline;
+    text-align: center;
+    margin: inherit;
+    padding: 10px;
+}
 p{
    /*font-family: OpenSans;*/
     color: #486372;
@@ -189,4 +197,63 @@ p{
     display: inline;
     text-align: center;
     margin: inherit;
+    padding: 1em;
+}
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #025520;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+#myBtn:hover {
+    background-color: #7ec985;
+}
+#myStudiesDiv {
+    float: right;
+    width: 47%;
+    padding: 50px;
+    text-align: center;
+    background-color: lightblue;
+    margin-top: 20px;
+    margin-right: 30px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+}
+#myProjectsDiv {
+    float: right;
+    width: 47%;
+    padding: 50px;
+    text-align: center;
+    background-color: #d0e6ae;
+    margin-top: 20px;
+    margin-right: 30px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+}
+#myHobbysDiv {
+    float: right;
+    width: 47%;
+    padding: 50px;
+    text-align: center;
+    background-color: #e6c1c7;
+    margin-top: 20px;
+    margin-right: 30px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+}
+#myContactDiv {
+    float: right;
+    width: 47%;
+    padding: 50px;
+    text-align: center;
+    background-color: #e0e6c4;
+    margin-top: 20px;
+    margin-right: 30px;
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
 }
