--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
     overflow-x: auto;
 }
 .topnav a:hover {
-    color: #067217;
+    color: #4c956e;
     font-size: 14px;
     padding: 15px 0;
     height: 5px;
@@ -67,7 +67,7 @@
 a:link, a:visited{
     text-align: center;
     text-decoration: none;
-    color:#2ee5a4;
+    color: #067217;
 }
 .menu{
     box-sizing: border-box;
@@ -87,40 +87,35 @@ li {
     display: inline;
 }
 .about {
-    color: #2ee5a4;
-    border-bottom: 2px solid #2ee5a4;
+    border-bottom: 2px solid #067217;
     font-size: 14px;
     display: inline-block;
     padding: 15px 10px;
     height: 15px;
 }
 .project{
-    color: #2ee5a4;
-    border-bottom: 2px solid #2ee5a4;
+    border-bottom: 2px solid #067217;
     font-size: 14px;
     display: inline-block;
     padding: 15px 10px;
     height: 15px;
 }
 .hobby {
-    color: #2ee5a4;
-    border-bottom: 2px solid #2ee5a4;
+    border-bottom: 2px solid #067217;
     font-size: 14px;
     display: inline-block;
     padding: 15px 10px;
     height: 15px;
 }
 .contact{
-    color: #2ee5a4;
-    border-bottom: 2px solid #2ee5a4;
+    border-bottom: 2px solid #067217;
     font-size: 14px;
     display: inline-block;
     padding: 15px 10px;
     height: 15px;
 }
 .study{
-    color: #2ee5a4;
-    border-bottom: 2px solid #2ee5a4;
+    border-bottom: 2px solid #067217;
     font-size: 14px;
     display: inline-block;
     padding: 15px 10px;
@@ -128,17 +123,19 @@ li {
     cursor: pointer;
 }
 body{
-    font-family: OpenSans;
+    font-family: 'Open Sans',sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    background-color: #f9f3ff;
+    /*background-color: #f9f3ff;*/
     float: left;
+    background-image: url('old-paper.jpg');
 }
 .profile-box {
     float: left;
+    font-style: italic;
     width: 28%;
     padding: 15px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
     margin-left: 30px;
 }
 @media (max-width:600px) {
@@ -173,7 +170,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover; */
     float: right;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
     width: 50%;
     height: 200px;
     padding: 30px;
@@ -230,17 +227,17 @@ p{
 #myBtn:hover {
     background-color: #7ec985;
 }
-#myStudiesDiv {
+.button {
     float: right;
     width: 50%;
     padding: 50px;
     text-align: center;
-    background-color: lightblue;
+/*    background-color: lightblue;*/
     margin-top: 20px;
     margin-right: 30px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
 }
-#myProjectsDiv {
+/*#myProjectsDiv {
     float: right;
     width: 50%;
     padding: 50px;
@@ -269,7 +266,7 @@ p{
     margin-top: 20px;
     margin-right: 30px;
     box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
-}
+}*/
 .page {
     color: #093263;
 }
