--- a/styles.css
+++ b/styles.css
@@ -1,272 +1,59 @@
-.header {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700);
 
-/*Use a media query to add a break point at 800px:*/
-@media (max-width:800px) {
-    .description, .profile-box, .menu {
-        width:100%;/*The width is 100%, when the viewport is 800px or smaller*/
-    }
-}
-.description::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.topnav {
-   /* background-color: #7ec985;
-    overflow: hidden;
-    font-family: cursive;
-    margin: 20px;
-    margin-left: 15px;
-    width: 100px;
-    margin-top: 60px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2); */
-    border-top: 1px solid #eeeff2;
-  /*  position: relative;
-    border-bottom: 1px solid #eeeff2; */
-    overflow: hidden;
-    margin-top: 20px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
-    margin-bottom: 30px;
-    background-color: white;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-.topnav a {
-   /* float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px; */
-    background-color: #fff;
-    list-style-type: none;
-    text-align: center;
-    white-space: nowrap;
-    overflow-x: auto;
-}
-.topnav a:hover {
-    color: #4c956e;
-    font-size: 14px;
-    padding: 15px 0;
-    height: 5px;
-    background: transparent;
-    border-bottom: 1px solid transparent;
-    text-decoration: none;
-}
-
-/*.topnav a.active {
-    background-color: #4c956e;
-    color: white;
-}*/
-
-a:link, a:visited{
-    text-align: center;
-    text-decoration: none;
-    color: #067217;
-}
-.menu{
-    box-sizing: border-box;
-    white-space: nowrap;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: -webkit-match-parent;
-    background-color: #fff;
-    list-style-type: none;
-    text-align: left;
-    overflow-x: visible;
-    border: 200px;
-    align-content: center;
-    float: left;
-}
-li {
-    display: inline;
-}
-.about {
-    border-bottom: 2px solid #067217;
-    font-size: 14px;
-    display: inline-block;
-    padding: 15px 10px;
-    height: 15px;
-}
-.project{
-    border-bottom: 2px solid #067217;
-    font-size: 14px;
-    display: inline-block;
-    padding: 15px 10px;
-    height: 15px;
-}
-.hobby {
-    border-bottom: 2px solid #067217;
-    font-size: 14px;
-    display: inline-block;
-    padding: 15px 10px;
-    height: 15px;
-}
-.contact{
-    border-bottom: 2px solid #067217;
-    font-size: 14px;
-    display: inline-block;
-    padding: 15px 10px;
-    height: 15px;
-}
-.study{
-    border-bottom: 2px solid #067217;
-    font-size: 14px;
-    display: inline-block;
-    padding: 15px 10px;
-    height: 15px;
-    cursor: pointer;
-}
-body{
+body {
     font-family: 'Open Sans',sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    /*background-color: #f9f3ff;*/
-    float: left;
-    background-image: url('old-paper.jpg');
+    font-size: 16px;
+    font-weight: 300;
+    color: #4c4c4c;
+    margin: 0;
+    padding: 0;
 }
-.profile-box {
-    float: left;
-    font-style: italic;
-    width: 28%;
-    padding: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-    margin-left: 30px;
+#page {
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
 }
-@media (max-width:600px) {
-    #profile-box {
-        width: 100%;
-    }
+
+/*Text*/
+h1 {
+    margin: 0 0 1em 0;
+    font-size: 2.8em;
+    font-weight: 700;
 }
-.name {
-    text-align: center;
-    display: inline;
-    vertical-align: middle;
-    margin: inherit;
+h2 {
+    margin: 0 0 .5em 0;
+    font-size: 1.6em;
+    font-weight: 700;
+    line-height: 1.1em;
 }
-.avatar {
-    vertical-align: middle;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin: inherit;
+h3 {
+    margin: 0 0 .5em 0;
+    font-size: 1.3em;
+    font-weight: 700;
 }
-.words{
-    color: #486372;
-    margin: inherit;
-    font-style: italic;
-    padding: 10px;
+h4 {
+    margin: 0 0 1.5em 0;
+    font-size: 1em;
+    font-weight: 700;
 }
-.description {
-  /*  background-image: url("background.jpg");
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; */
-    float: right;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
-    width: 50%;
-    height: 200px;
-    padding: 30px;
-    margin-right: 30px;
+p {
+    margin: 0 0 1em 0;
 }
-@media (max-width: 600px) {
-    #description {
-        width: 100%;
-    }
+
+a{
+    color: #138a33;
 }
-h1{
-    color: #577483;
-    font-style: normal;
-  /*font-family: OpenSans;*/
-   /*margin-left: 500px; */
-    display: inline;
-    text-align: center;
-    margin: inherit;
-    padding: 10px;
+a:visited {
+    color: #00dc82;
 }
-h3{
-    color: #577483;
-    font-style: normal;
-    display: inline;
-    text-align: center;
-    margin: inherit;
-    padding: 10px;
+
+/*Header*/
+header {
+    height: 430px;
+    position: relative;
 }
-p{
-   /*font-family: OpenSans;*/
-    color: #486372;
-   /*margin-top: 30px;
-    margin-left: 600px;*/
-    display: inline;
-    text-align: center;
-    margin: inherit;
-    padding: 1em;
-}
-#myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #025520;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-}
-#myBtn:hover {
-    background-color: #7ec985;
-}
-#myStudiesDiv {
-    float: right;
-    width: 50%;
-    padding: 50px;
-    text-align: center;
-/*    background-color: lightblue;*/
-    margin-top: 20px;
-    margin-right: 30px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
-}
-#myProjectsDiv {
-    float: right;
-    width: 50%;
-    padding: 50px;
-    text-align: center;
-/*    background-color: #d0e6ae;*/
-    margin-top: 20px;
-    margin-right: 30px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
-}
-#myHobbysDiv {
-    float: right;
-    width: 50%;
-    padding: 50px;
-    text-align: center;
-/*    background-color: #e6c1c7;*/
-    margin-top: 20px;
-    margin-right: 30px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
-}
-#myContactDiv {
-    float: right;
-    width: 50%;
-    padding: 50px;
-    text-align: center;
-/*    background-color: #e0e6c4;*/
-    margin-top: 20px;
-    margin-right: 30px;
-    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.6);
-}
-.page {
-    color: #093263;
-}
+
+
+
+
+
