--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ section.main {
     margin: 20px;
 /*    width: 800px;
     height: 100px;*/
-    background-color: #378a93;
+    background-color: #e0e6c4;
     float: right;
     margin-right: 30px;
 }
