--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ section.main {
 section.menu {
     float: right;
     width: 900px;
-    background-color: #378a93;
+    background-color: #2d76c4;
     padding-top: 30px;
     padding-bottom: 30px;
     color: #e9e3ff;
