--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,17 @@ h4 {
 }
 p {
     margin: 0 0 1em 0;
-    color: #2b0306;
+    color: #2b1c27;
 }
 
 a{
-    color: #138a33;
+    color: #0d5a4c;
     text-decoration: none;
 }
 a:visited {
-    color: #00dc82;
+    color: #205c33;
 }
+
 
 /*Header*/
 header {
@@ -96,6 +97,7 @@ section.card {
     position: relative;/*or fixed to stay there*/
     width: 250px;
     height: 270px;
+    border-radius: 30%;
     background-color: #dbe8ea;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -124,7 +126,7 @@ section.card .profile .words{
 /*Section Main*/
 section.main {
     padding: 20px;
-    margin: 20px;
+    margin: 10px;
 /*  width: 800px;
     height: 100px;*/
     background-color: #bbecf6;
@@ -143,19 +145,19 @@ section.content {
     display: none;
     position: fixed;
     bottom: 20px;
-    right: 30px;
+    right: 80px;
     z-index: 99;
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: #025520;
+    background-color: #0d5a4c;
     color: white;
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
 }
 #myBtn:hover {
-    background-color: #7ec985;
+    background-color: #025520;
 }
 
 
@@ -180,7 +182,7 @@ nav ul {
     padding: 0;
 }
 nav ul li:hover{
-    background-color: #0f2b13;
+    background-color: #0d5a4c;
 }
 
 nav ul li a {
@@ -198,7 +200,7 @@ nav ul li a:visited {
     color: #fff;
 }
 nav ul li a:hover {
-    background-color: #0c6d2d;
+    background-color: #0d5a4c;
 }
 nav > ul {
     padding-left: 200px;
@@ -224,6 +226,10 @@ footer {
     margin-bottom: 10px;
 }
 
+section.projectI {
+    background-color: #b3eec9;
+    padding: 20px;
+}
 
 
 .progres {
