--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ section.card {
     position: relative;/*or fixed to stay there*/
     width: 250px;
     height: 270px;
-    border-radius: 30%;
+    border-radius: 20%;
     background-color: #dbe8ea;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -128,6 +128,7 @@ section.card .profile .words{
 section.main {
     padding: 15px;
     margin: 10px;
+    text-align: center;
 /*  width: 800px;
     height: 100px;*/
     background-color: #bbecf6;
@@ -234,9 +235,7 @@ section.projectI {
 
 
 .progres {
-    margin-left: 300px;
-    height: 100px;
-    width: 300px;
+    text-align: center;
     top: 0;
     bottom: 0;
 }
@@ -259,6 +258,9 @@ section.projectI {
     #myBtn {
         right: 20px;
     }
+   /* .progres {
+        text-align: center;
+    }*/
 }
 
 @media screen and (max-width: 1000px) {
@@ -280,6 +282,27 @@ section.projectI {
     }
 }
 
+@media screen and (max-width: 960px){
+    h1 {
+        font-size: 2.2em;
+    }
+    header {
+        height: 200px;
+    }
+    .card {
+        width: 80px;
+        float: left;
+        border-radius: 10%;
+    }
+    .main {
+        max-width: 570px;
+        text-align: center;
+    }
+    #myBtn {
+        right: 10px;
+    }
+}
+
 @media screen and (max-width: 825px) {
     h1 {
         font-size: 2.2em;
@@ -290,6 +313,7 @@ section.projectI {
     .card {
         width: 80px;
         float: left;
+        border-radius: 10%;
     }
     .main {
         max-width: 485px;
@@ -322,6 +346,7 @@ section.projectI {
         margin-left: 120px;
         margin-bottom: 30px;
         margin-top: 10px;
+        border-radius: 10%;
     }
     section.card .avatar {
         width: 150px;
@@ -372,6 +397,7 @@ section.projectI {
     }
     section.card {
         margin-left: 55px;
+        border-radius: 10%;
     }
     section.main {
         margin-left: 55px;
@@ -386,7 +412,7 @@ section.projectI {
     section.card {
         width: 350px;
         margin-left: 10px;
-        border-radius: 20%;
+        border-radius: 10%;
     }
     section.card .avatar {
         margin: 0;
@@ -409,7 +435,32 @@ section.projectI {
     nav > ul {
         padding-left: 160px;
     }
+/*    nav ul li {
+        margin-bottom: 0;
+    }*/
+    nav ul li a {
+        margin-bottom: 0;
+    }
 }
+
+@media screen and (max-width: 384px) {
+    section.card {
+        width: 320px;
+        border-radius: 10%;
+    }
+    section.main {
+        width: 330px;
+        text-align: center;
+    }
+    nav > ul {
+        padding-left: 140px;
+    }
+    nav {
+        padding: 40px 0 0 0;
+    }
+}
+}
+
 @media screen and (max-width: 375px) {
     section.card {
         width: 320px;
@@ -417,12 +468,47 @@ section.projectI {
     }
     section.main {
         width: 330px;
+        text-align: center;
     }
     nav > ul {
         padding-left: 140px;
     }
     nav {
+        padding: 10px 0 0 0;
+    }
+    nav ul li a {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    header a.logo {
+        top: 3px;
+        left: 15px;
+    }
+    section.card {
+        width: 300px;
+        border-radius: 10%;
+    }
+    section.main {
+        width: 310px;
+        text-align: center;
+    }
+    nav > ul {
+        padding-left: 140px;
+        /*font-size: 13px;*/
+    }
+    nav ul li a{
+        margin-bottom: 0;
+    }
+    nav ul li {
+        margin-bottom: 0;
+    }
+    nav {
         padding: 40px 0 0 0;
+    }
+    .progres {
+        text-align: center;
     }
 }
 
@@ -440,7 +526,7 @@ section.projectI {
     }
     section.card {
         width: 260px;
-        border-radius: 20px;
+        border-radius: 10%;
     }
     section.card .words {
         margin-bottom: 0;
