--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,6 @@ header a.logo span {
 
 /*Sections*/
 section {
-    padding: 0 30px;
     display: flex;
 }
 
@@ -93,19 +92,20 @@ section::after {
 
 /*Section-Main*/
 section.card {
-    margin: 10px;
-    padding: 15px;
+    margin-top: 10px;
     position: relative;/*or fixed to stay there*/
-    width: 250px;
+    width: 33.333%;
     height: 270px;
-    border-radius: 20%;
+    border-radius: 15%;
     background-color: #dbe8ea;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
     float: left;
 }
 
 section.card .avatar {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -113,7 +113,7 @@ section.card .avatar {
 }
 
 section.card .profile {
-    padding: 2px 16px;
+    padding: 2px 14px;
 }
 section.card .profile h2{
     text-align: center;
@@ -121,26 +121,34 @@ section.card .profile h2{
 }
 section.card .profile .words{
     font-style: italic;
+    text-align: center;
 }
 
 
 /*Section Main*/
 section.main {
-    padding: 15px;
-    margin: 10px;
+    margin-top: 10px;
     text-align: center;
 /*  width: 800px;
     height: 100px;*/
-    background-color: #bbecf6;
-    width: 860px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    width: 66.666%;
 /*  flex: 50%;*/
 }
-section.content {
+section.main .content {
     padding: 10px;
+    background-color: #bbecf6;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
+section.main .resume {
+    margin: 10px;
+}
+section.main .study {
+    margin: 10px;
+}
+section.main .hobby {
+    margin: 10px;
+}
 
 /*Button*/
 #myBtn {
@@ -240,305 +248,24 @@ section.projectI {
     bottom: 0;
 }
 
-/*Media Screens*/
-@media screen and (max-width: 1024px) {
-    h1 {
-        font-size: 2.4em;
-    }
-    header {
-        height: 210px;
-    }
-    .card {
-        width: 110px;
-        float: left;
-    }
-    .main {
-        max-width: 680px;
-    }
-    #myBtn {
-        right: 20px;
-    }
-   /* .progres {
-        text-align: center;
-    }*/
-}
-
-@media screen and (max-width: 1000px) {
-    h1 {
-        font-size: 2.4em;
-    }
-    header {
-        height: 210px;
-    }
-    .card {
-        width: 110px;
-        float: left;
-    }
-    .main {
-        max-width: 680px;
-    }
-    #myBtn {
-        right: 20px;
-    }
-}
-
-@media screen and (max-width: 960px){
-    h1 {
-        font-size: 2.2em;
-    }
-    header {
-        height: 200px;
-    }
-    .card {
-        width: 80px;
-        float: left;
-        border-radius: 10%;
-    }
-    .main {
-        max-width: 570px;
-        text-align: center;
-    }
-    #myBtn {
-        right: 10px;
-    }
-}
-
-@media screen and (max-width: 825px) {
-    h1 {
-        font-size: 2.2em;
-    }
-    header {
-        height: 200px;
-    }
-    .card {
-        width: 80px;
-        float: left;
-        border-radius: 10%;
-    }
-    .main {
-        max-width: 485px;
-    }
-    #myBtn {
-        right: 10px;
-    }
-}
-
-@media screen and (max-width: 760px) {
-    h1 {
-        font-size: 1.8em;
-    }
-    h2 {
-        font-size: 1.6em;
-    }
-    h3 {
-        font-size: 1.1em;
-    }
-    h4 {
-        font-size: 1em;
-    }
-    header {
-        height: 180px;
-    }
+@media screen and (max-width: 768px) {
     section.card {
-        width: 475px;
-        padding: 20px;
-        float: none;
-        margin-left: 120px;
-        margin-bottom: 30px;
-        margin-top: 10px;
-        border-radius: 10%;
+        margin: 10px 20% 0 20%;
+        width: 60%;
+    }
+    section.card .words {
+        text-align: center;
     }
     section.card .avatar {
-        width: 150px;
-        height: 150px;
-        padding: 20px;
-        position: relative;
-    }
-    section.card .name {
-        margin-left: 50px;
-        padding-left: 20px;
-        padding-top: 20px;
-        position: absolute;
-    }
-    section.card .words {
-        position: absolute;
-        padding-left: 20px;
-        margin-left: 130px;
-        margin-right: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
     section.main {
-        margin-left: 120px;
-    }
-    nav {
-        height: 50px;
+        width: 100%;
     }
     #myBtn {
-        right: 30px;
-    }
-}
-
-@media screen and (max-width: 625px) {
-    header {
-        height: 130px;
-    }
-    header a.logo {
-        width: 150px;
-        height: 70px;
-        top: 3px;
-        left: 25px;
-    }
-    nav {
-        height: 30px;
-        padding-bottom: 5px;
-    }
-    nav ul li a {
-        margin-bottom: 20px;
-        padding: 5px 10px;
-    }
-    section.card {
-        margin-left: 55px;
-        border-radius: 10%;
-    }
-    section.main {
-        margin-left: 55px;
-    }
-    #myBtn {
-        font-size: 10px;
-        right: 7px;
-    }
-}
-
-@media screen and (max-width: 414px) {
-    section.card {
-        width: 350px;
-        margin-left: 10px;
-        border-radius: 10%;
-    }
-    section.card .avatar {
-        margin: 0;
-        padding: 15px;
-        width: 110px;
-        height: 110px;
-    }
-    section.card .name {
-        padding: 20px;
-        margin-left: 30px;
-    }
-    section.card .words {
-        margin: 20px;
-        padding: 15px;
-    }
-    section.main {
-        margin-left: 10px;
-        width: 365px;
-    }
-    nav > ul {
-        padding-left: 160px;
-    }
-/*    nav ul li {
-        margin-bottom: 0;
-    }*/
-    nav ul li a {
-        margin-bottom: 0;
-    }
-}
-
-@media screen and (max-width: 384px) {
-    section.card {
-        width: 320px;
-        border-radius: 10%;
-    }
-    section.main {
-        width: 330px;
-        text-align: center;
-    }
-    nav > ul {
-        padding-left: 140px;
-    }
-    nav {
-        padding: 40px 0 0 0;
-    }
-}
-}
-
-@media screen and (max-width: 375px) {
-    section.card {
-        width: 320px;
-        border-radius: 10%;
-    }
-    section.main {
-        width: 330px;
-        text-align: center;
-    }
-    nav > ul {
-        padding-left: 140px;
-    }
-    nav {
-        padding: 10px 0 0 0;
-    }
-    nav ul li a {
-        margin-bottom: 0;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    header a.logo {
-        top: 3px;
-        left: 15px;
-    }
-    section.card {
-        width: 300px;
-        border-radius: 10%;
-    }
-    section.main {
-        width: 310px;
-        text-align: center;
-    }
-    nav > ul {
-        padding-left: 140px;
-        /*font-size: 13px;*/
-    }
-    nav ul li a{
-        margin-bottom: 0;
-    }
-    nav ul li {
-        margin-bottom: 0;
-    }
-    nav {
-        padding: 40px 0 0 0;
-    }
-    .progres {
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 325px) {
-    h1{
-        margin: 0;
-        padding: 0;
-        font-size: 1em;
-    }
-    h2 {
-        font-size: 1.3em;
-    }
-    h4{
-        font-size: .9em;
-    }
-    section.card {
-        width: 260px;
-        border-radius: 10%;
-    }
-    section.card .words {
-        margin-bottom: 0;
-        padding-bottom: 0;
-    }
-    section.main {
-        width: 270px;
-    }
-    nav > ul {
-        padding-left: 105px;
-    }
-    header a.logo {
-        left: 2px;
+        font-size: 15px;
+        right: 10px;
     }
 }
