--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,9 @@ nav > ul >li > a {
     width: auto;
     padding: 10px 20px 15px 20px;
 }
+.topnav .icon {
+    display: none;
+}
 
 
 /*Footer*/
@@ -242,7 +245,7 @@ section.projectI {
 }
 
 
-.progres {
+.progress {
     text-align: center;
     top: 0;
     bottom: 0;
@@ -269,3 +272,59 @@ section.projectI {
         right: 10px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    nav > ul {
+        padding-left: 80%;
+    }
+    header a.logo {
+        left: 10px;
+        top: 0;
+    }
+    .topnav ul li a {
+        display: none;
+    }
+
+    .topnav ul li a.icon {
+        float: right;
+        display: block;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: absolute;
+    }
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 5%;
+        top: 10%;
+        color: white;
+        padding: 5px;
+        font-size: 20px;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        right: 70%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    section.card .words {
+        text-align: center;
+        font-size: .9em;
+    }
+    #myBtn {
+        font-size: 10px;
+        right: 10px;
+    }
+    p {
+        font-size: .8em;
+    }
+}
+
+
+
