--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,6 @@ a:visited {
     color: #205c33;
 }
 
-pre {
-    font: inherit;
-}
 
 
 /*Header*/
@@ -258,6 +255,11 @@ section.projectII {
     margin-left: 10px;
     margin-right: 10px;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
+    position: relative;
+}
+
+section.projectII li {
+    list-style: none;
 }
 
 .progress {
@@ -266,6 +268,20 @@ section.projectII {
     bottom: 0;
 }
 
+/*#read-more-button {
+    font-size: 15px;
+    border: none;
+    outline: none;
+    background-color: #0d5a4c;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 4px;
+}*/
+
+
+/*Smaller Screens*/
 @media screen and (max-width: 768px) {
     section.card {
         margin: 10px 20% 0 20%;
