--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Indie+Flower);
 
 
 body {
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     font-weight: 300;
     color: #4c4c4c;
@@ -97,8 +97,9 @@ section.card {
     position: relative;/*or fixed to stay there*/
     width: 33.333%;
     height: 270px;
-    border-radius: 15%;
-    background-color: #dbe8ea;
+    border-radius: 10%;
+    background-color: #dddddd;
+    /*#dbe8ea*/
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
     float: left;
 }
@@ -121,6 +122,7 @@ section.card .profile h2{
     padding: 5px;
 }
 section.card .profile .words{
+    font-family: 'Indie Flower', cursive;
     font-style: italic;
     text-align: center;
 }
@@ -128,7 +130,7 @@ section.card .profile .words{
 
 /*Section Main*/
 section.main {
-    margin-top: 10px;
+    /*margin-top: 3px;*/
     text-align: center;
 /*  width: 800px;
     height: 100px;*/
@@ -137,7 +139,7 @@ section.main {
 }
 section.main .content {
     padding: 10px;
-    background-color: #bbecf6;
+    background-color: #d8f0e8;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
 }
 
@@ -156,9 +158,9 @@ section.main .hobby {
     display: none;
     position: fixed;
     bottom: 20px;
-    right: 85px;
+    right: 1%;
     z-index: 99;
-    font-size: 18px;
+    font-size: 15px;
     border: none;
     outline: none;
     background-color: #0d5a4c;
@@ -233,7 +235,7 @@ footer {
     height: 60px;
     font-size: .8em;
     padding: 30px;
-    background-color: #dbe8ea;
+    background-color: #cccccc;
     color: #767477;
     text-align: center;
     margin-top: 10px;
@@ -242,13 +244,13 @@ footer {
 
 section.projectI {
     margin-top: 10px;
-    background-color: #b3eec9;
+    background-color: #d8f0e8;
     padding: 20px;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
 }
 section.projectII {
     margin-top: 10px;
-    background-color: #b3eec9;
+    background-color: #d8f0e8;
     padding: 20px;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
     position: relative;
